Fix center alignment in hero section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,6 +71,7 @@ a {
 
     display: flex;
     flex-direction: column;
+    justify-content: center;
 
     height: calc(100vh - 90px);
     background: #e6f0ff;
@@ -117,15 +118,11 @@ a {
     border-radius: 8px;
 }
 
-.hero {
-    margin-top: 130px;
-}
-
-.hero .info {
+.hero-wrap .info {
     width: 51%;
 }
 
-.hero .sub-title {
+.hero-wrap .sub-title {
     font-weight: 500;
     font-size: 1.8rem;
     line-height: 1.5;
@@ -134,7 +131,7 @@ a {
     color: #687690;
 }
 
-.hero .title {
+.hero-wrap .title {
     margin-top: 8px;
     font-weight: 700;
     font-size: 6.2rem;
@@ -144,7 +141,7 @@ a {
     color: #000336;
 }
 
-.hero .desc {
+.hero-wrap .desc {
     margin-top: 30px;
 
     font-weight: 400;
@@ -689,7 +686,7 @@ a {
     background: #f9f9f9;
 }
 
-.footer .social-link + .social-link {
+.footer .social-link+.social-link {
     margin-left: 16px;
 }
 
